--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <i>italics</i> yeezy gap
      <br>
      <a href="funnyhoodie.jpg">
-       <img src="funnyhodie.jpg" height="10%">
+       <img src="funnyhoodie.jpg" height="10%">
       </a>
   </body>
 </html>
