--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
-  <title>My First webage</title>
+  <title>Funny Hoodie</title>
   <body>
     <h1>Funny Hoodie</h1>
-    <p>Here is a funny looking hoodie <b>bold</b>
-      <i>italics</i> yeezy gap
+    <p>Here is a funny looking hoodie <b>but</b>
+      <i>yeezy gap</i>
      <br>
      <a href="funnyhoodie.jpg">
        <img src="funnyhoodie.jpg" height="10%">
+       <p>It might look funny but this hoodie is in high demand due to the creator of it <i>Kanye West</i> one of the most iconic artist in the music industry<p>
       </a>
   </body>
 </html>
