--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <i>yeezy gap</i>
      <br>
      <a href="funnyhoodie.jpg">
-       <img src="funnyhoodie.jpg" height="10%">
+       <img src="funnyhoodie.jpg" height="10%"> </p>
        <p>It might look funny but this hoodie is in high demand due to the creator of it <i>Kanye West</i> one of the most iconic artist in the music industry</p>
       </a>
   </body>
