--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
      <br>
      <a href="funnyhoodie.jpg">
        <img src="funnyhoodie.jpg" height="10%"> </p>
-       <p>It might look funny but this hoodie is in high demand due to the creator of it <i>Kanye West</i> one of the most iconic artist in the music industry</p>
+    <p>It might look funny but</p> 
+    <p>this hoodie is in high demand due to the creator of it</p>
+    <p><i>Kanye West</i> one of the most iconic artist in the music industry</p>
       </a>
   </body>
 </html>
