--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
   <title>Funny Hoodie</title>
   <body>
     <h1>Funny Hoodie</h1>
-    <p>Here is a funny looking hoodie <b>but</b>
-      <i>yeezy gap</i>
+    <p>Here is a funny looking hoodie</p>
           <p>It might look funny but</p> 
-    <p>this hoodie is in high demand due to the creator of it</p>
-    <p><i>Kanye West</i> one of the most iconic artist in the music industry</p>
+    <p>this hoodie is in high demand</p>
+     <p>due to the creator of it</p>
+    <p><i>Kanye West</i> one of the most <b>ICONIC</b> artist in the music industry</p>
      <br>
      <a href="funnyhoodie.jpg">
        <img src="funnyhoodie.jpg" height="10%"> </p>
