--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <title>Funny Hoodie</title>
+  <title>Random Pictures From My Phone</title>
   <body>
     <h1>Funny Hoodie</h1>
     <p>Here is a funny looking hoodie</p>
@@ -10,6 +10,8 @@
      <br>
      <a href="funnyhoodie.jpg">
        <img src="funnyhoodie.jpg" height="10%"> </p>
+    
+    
       </a>
   </body>
 </html>
