--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
      <a href="funnyhoodie.jpg">
        <img src="funnyhoodie.jpg" height="10%"> </p>
     
+    <h2>Dog</h2>
+    <p>This is a picture of my dog on 4/13/22</p>
+    <p>her name is Stella, she in in my mom's robe</p>
+    <p>she is usually hiding in my mom's jackets in the</p>
+    <p>morning when my mom is taking me and my sister to school</p>
+    <br>
+    <a href="
     
       </a>
   </body>
