--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     
     <h2>Dog</h2>
     <p>This is a picture of my dog on 4/13/22</p>
-    <p>her name is Stella, she in in my mom's robe</p>
+    <p>her name is Stella, she is in my mom's jacket</p>
     <p>she is usually hiding in my mom's jackets in the</p>
-    <p>morning when my mom is taking me and my sister to school</p>
+    <p>morning when my mom is taking my sister and I to school</p>
     <br>
-    <a href="
+    <a href="IMG_7660.jpeg">
+      <img src="IMG_7660.jpeg" height="10%"> </p>
     
       </a>
   </body>
