--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
      <br>
      <a href="funnyhoodie.jpg">
        <img src="funnyhoodie.jpg" height="10%"> </p>
-    
+  </body>
+   
+    <body>
     <h2>Dog</h2>
     <p>This is a picture of my dog on 4/13/22</p>
     <p>her name is Stella, she is in my mom's jacket</p>
