--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
   <title>Random Pictures From My Phone</title>
   <body>
     <h1>Funny Hoodie</h1>
-    <p>Here is a funny looking hoodie</p>
+    <h2>Here is a funny looking hoodie</h2>
           <p>It might look funny but</p> 
     <p>this hoodie is in high demand</p>
      <p>due to the creator of it</p>
     <p><i>Kanye West</i> one of the most <b>ICONIC</b> artist in the music industry</p>
      <br>
      <a href="funnyhoodie.jpg">
-       <img src="funnyhoodie.jpg" height="10%"> </p>
+       <img src="funnyhoodie.jpg" height="10%">.</p>
   </body>
    
     <body>
-    <h2>Dog</h2>
+    <h3>Dog</h3>
     <p>This is a picture of my dog on 4/13/22</p>
     <p>her name is Stella, she is in my mom's jacket</p>
     <p>she is usually hiding in my mom's jackets in the</p>
