--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <p>this hoodie is in high demand</p>
      <p>due to the creator of it</p>
     <p><i>Kanye West</i> one of the most <b>ICONIC</b> artist in the music industry</p>
-     <br>
-     <a href="funnyhoodie.jpg">
-       <img src="funnyhoodie.jpg" height="10%">.</p>
+     <p><a href="funnyhoodie.jpg">
+       <img src="funnyhoodie.jpg" height="10%"> </p>
   </body>
-  }
    
     <body>
     <h3>Dog</h3>
