--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
      <p>due to the creator of it</p>
     <p><i>Kanye West</i> one of the most <b>ICONIC</b> artist in the music industry</p>
      <p><a href="funnyhoodie.jpg">
-       <img src="funnyhoodie.jpg" height="10%"> </p>
+       <img src="funnyhoodie.jpg"> </p>
   </body>
    
     <body>
-    <h3>Dog</h3>
+    <h1>Dog</h1>
     <p>This is a picture of my dog on 4/13/22</p>
     <p>her name is Stella, she is in my mom's jacket</p>
     <p>she is usually hiding in my mom's jackets in the</p>
