--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <p>this hoodie is in high demand</p>
      <p>due to the creator of it</p>
     <p><i>Kanye West</i> one of the most <b>ICONIC</b> artist in the music industry</p>
-     <p><a href="funnyhoodie.jpg">
-       <img src="funnyhoodie.jpg"> </p>
+       <img src="funnyhoodie.jpg" height="10%"> </p>
   </body>
    
     <body>
@@ -18,7 +17,6 @@
     <p>she is usually hiding in my mom's jackets in the</p>
     <p>morning when my mom is taking my sister and I to school</p>
     <br>
-    <a href="IMG_7660.jpeg">
       <img src="IMG_7660.jpeg" height="10%"> </p>
     
       </a>
