--- a/secret.html
+++ b/secret.html
@@ -1,19 +1,105 @@
 <html>
-  <title> Hidden Lists</sPoOkY>
+  <title> sPoOkY </title>
   <body>
-    <h1>Grocery List</h1>
-    <ul>
-      <li>lemns</li>
-      <li>garlic</li>
-      <li>bananas</li>
-    </ul>
-    <h1>Upcoming Birthdays</h1>
+    <h1>My Top 10 Favorite songs right now</h1>
     <ol>
-      <li>Mark:March 30</li>
-      <li>Carla: April 7</li>
-      <li>Gavin: June 10</li>
-      <li>Nathan: August 5</li>
-      <li>Jasper: September 2</li>
-      
+      <li>Touh the Sky By Kanye West</li>
+      <li>Come and See me (ft.Drake) By PARTYNEXTDOOR</li>
+      <li>Poetic Justice (ft.Drake) By Kendrick Lamar</li>
+      <li>All Falls Down (ft. Syleena Johnson) By Kanye West</li>
+      <li>PRIDE. By Kendrick Lamar</li>
+      <li>FlatBed Freestyle By PlayBoi Carti</li>
+      <li>I LIKE U By NIKI</li>
+      <li>Somebody By keshi</li>
+      <li>She (ft. Frank Ocean) By Tyler, the creator</li>
+      <li>Teenage Fever By Drake</li>
+    </ol>
+    <h1>Aritst that are feature on my playlist</h1>
+    <ul>
+      <li>yeat</li>
+      <li>Playboi Carti</li>
+      <li>Daniel Caesar</li>
+      <li>Kendrick Lamar</li>
+      <li>Lil Uzi Vert</li>
+      <li>Jack Harlow</li>
+      <li>SZA</li>
+      <li>keshi</li>
+      <li>Drake</li>
+      <li>PinkPantheress</li>
+      <li>Nicki Minaj</li>
+      <li>NIKI</li>
+      <li>Kanye West</li>
+      <li>Cardi B</li>
+      <li>Bruno Mars</li>
+      <li>Lil Wayne</li>
+      <li>21 Savage</li>
+      <li>Metro Boomin</li>
+      <li>Gunna</li>
+      <li>J. Cole</li>
+      <li>The Weeknd</li>
+      <li>Ice Cube</li>
+      <li>Rick Ross</li>
+      <li>PARTYNEXTDOOR</li>
+      <li>Justine Skye</li>
+      <li>Lil Durk</li>
+      <li>Khalid</li>
+      <li>Brandy</li>
+      <li>Future</li>
+      <li>Brent Faiyaz</li>
+      <li>Tyler, The Creator</li>
+      <li>French Montana</li>
+      <li>Jhene Aiko</li>
+      <li>GirlzLuhDev</li>
+      <li>H.E.R</li>
+      <li>Brysn tiller</li>
+      <li>Lil Baby</li>
+    </ul>
+    
+    <table width='100%' border=1px cellspacing=0>
+ <caption>Tony Tran's Schedule</caption>
+      <tr>
+        <th>Period</th>
+        <th>Class</th>
+        <th>Teacher</th>
+        <th>Room</th>
+      </tr>
+      <tr>
+        <td>1st</td>
+        <td>World History 10</td>
+        <td>Erin Smallwood</td>
+        <td>NW225</td>
+      </tr>
+      <tr>
+        <td>2nd</td>
+        <td>SPAN&121 SPAN 1</td>
+        <td>Katrina Johnson</td>
+        <td>SE125</td>
+      </tr>
+      <tr>
+        <td>3rd</td>
+        <td>English 10</td>
+        <td>Kaleigh Ansdell</td>
+        <td>NW131</td>
+      </td>
+    <tr>
+      <td>4th</td>
+      <td>Chemistry</td>
+      <td>Peter Bonifaci</td>
+      <td>SE209</td>
+    </tr>
+    <tr>
+      <td>5th</td>
+      <td>Computer Science Principle</td>
+      <td>Clint Chan</td>
+      <td>SE224</td>
+    </tr>
+    <tr>
+      <td>6th</td>
+      <td>Geometry H<td>
+      <td>Michael Taylor</td>
+      <td>NW227</td>
+    </tr>
+    </table>
+  
   </body>
 </html> 
