--- a/secret.html
+++ b/secret.html
@@ -14,7 +14,7 @@
       <li>She (ft. Frank Ocean) By Tyler, the creator</li>
       <li>Teenage Fever By Drake</li>
     </ol>
-    <h1>Aritst that are feature on my playlist</h1>
+    <h1>Artist that are featured on my playlist</h1>
     <ul>
       <li>yeat</li>
       <li>Playboi Carti</li>
@@ -95,7 +95,7 @@
     </tr>
     <tr>
       <td>6th</td>
-      <td>Geometry H<td>
+      <td>Geometry H</td>
       <td>Michael Taylor</td>
       <td>NW227</td>
     </tr>
