--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <p>morning when my mom is taking my sister and I to school</p>
     <br>
       <img src="IMG_7660.jpeg" height="10%"> </p>
+body {
+background-image: url("wallpaper.jpg")
+}
     
       </a>
   </body>
