--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
   <title>Random Pictures From My Phone</title>
   <body>
+    h1 {
+         color: blue;
+         font-size: 28pt;
+      }
+      body {
+          background-image: url("wallpaper.jpg")
+      }
     <h1>Funny Hoodie</h1>
     <h2>Here is a funny looking hoodie</h2>
           <p>It might look funny but</p> 
@@ -18,9 +25,6 @@
     <p>morning when my mom is taking my sister and I to school</p>
     <br>
       <img src="IMG_7660.jpeg" height="10%"> </p>
-body {
-background-image: url("wallpaper.jpg")
-}
     
       </a>
   </body>
