--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>
-  <title>Random Pictures From My Phone</title>
-  <body>
-    h1 {
+  <style>
+        h1 {
          color: blue;
          font-size: 28pt;
       }
       body {
           background-image: url("wallpaper.jpg")
       }
+  </style>
+  <title>Random Pictures From My Phone</title>
+  <body>
     <h1>Funny Hoodie</h1>
     <h2>Here is a funny looking hoodie</h2>
           <p>It might look funny but</p> 
