--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <style>
         h1 {
-         color: (181, 126, 220);
+         color: red;
          font-size: 28pt;
       }
       body {
